Add element type check, menu adjustment based on type, image upload functionality, and exclude images within 'kori-ignore' elements

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -52,6 +52,26 @@
                 </div>
             </div>
         }
+        else if (Kori.Mode == "EditImage")
+        {
+            <div id="kori-edit" class="kori-edit">
+                <div class="kori-edit__content">
+                    <div class="kori-edit__back">
+                        <button id="kori-edit__back" class="kori__btn-text" @onclick="Kori.CancelAsync">&lt; Back to edit</button>
+                    </div>
+                    <div class="kori-edit__header">
+                        <h5>Edit your image.</h5>
+                    </div>
+                    <div class="kori-edit__options">
+                        <input type="file" id="imageInput" accept="image/*" />                          
+                    </div>
+                    <div class="kori-edit__actions">
+                        <button class="kori-edit__cancel kori__btn" @onclick="Kori.CancelAsync">Cancel</button>
+                        <button class="kori-edit__save kori__btn-primary" @onclick="Kori.BeginSaveAsync">Save</button>
+                    </div>
+                </div>
+            </div>
+        }
         else if (Kori.Mode == "Translate")
         {
             <div id="kori-translation" class="kori-translation">
