--- a/Kori/KoriWidget.razor.css
+++ b/Kori/KoriWidget.razor.css
@@ -180,6 +180,9 @@
   max-height: 18px;
   margin: auto 0;
 }
+.kori-widget__actions .kori-edit__options input[type=file] {
+  max-width: 276px;
+}
 .kori-widget__actions .kori-edit__actions {
   width: 100%;
   display: flex;
