--- a/Kori/KoriWidget.razor.scss
+++ b/Kori/KoriWidget.razor.scss
@@ -205,6 +205,10 @@
                         margin: auto 0;
                     }
                 }
+
+                input[type=file] {
+                    max-width: 276px;
+                }
             }
 
             &__actions {
