Simple text editor markdown

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -34,16 +34,9 @@
                         <h5>Edit your content.</h5>
                     </div>
                     <div class="kori-edit__options">
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Bold.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Italic.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Strikethrough.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Union.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Code.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Quote.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Numbered.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Bullet.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Attachment.svg" /></button>
-                        <button class="kori__btn-icon"><img src="/_content/Kori/icons/Link.svg" /></button>
+                        <button class="kori__btn-icon" @onclick='() => Kori.ApplyMarkdown("**")'><img src="/_content/Kori/icons/Bold.svg" /></button>
+                        <button class="kori__btn-icon" @onclick='() => Kori.ApplyMarkdown("_")'><img src="/_content/Kori/icons/Italic.svg" /></button>
+                        <button class="kori__btn-icon" @onclick='() => Kori.ApplyMarkdown("~~")'><img src="/_content/Kori/icons/Strikethrough.svg" /></button>
                     </div>
                     <div class="kori-edit__actions">
                         <button class="kori-edit__cancel kori__btn" @onclick="Kori.CancelAsync">Cancel</button>
