Update upload image method

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -63,7 +63,7 @@
                         <h5>Edit your image.</h5>
                     </div>
                     <div class="kori-edit__options">
-                        <input type="file" id="imageInput" accept="image/*" @onchange="Kori.OnFileSelectedAsync" />
+                        <input type="file" id="imageInput" accept="image/*" />
                     </div>
                     <div class="kori-edit__actions">
                         <button class="kori-edit__cancel kori__btn" @onclick="Kori.CancelAsync">Cancel</button>
