--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -37,6 +37,7 @@
                         <button class="kori__btn-icon" @onclick='() => Kori.ApplyMarkdown("**")'><img src="/_content/Kori/icons/Bold.svg" /></button>
                         <button class="kori__btn-icon" @onclick='() => Kori.ApplyMarkdown("_")'><img src="/_content/Kori/icons/Italic.svg" /></button>
                         <button class="kori__btn-icon" @onclick='() => Kori.ApplyMarkdown("~~")'><img src="/_content/Kori/icons/Strikethrough.svg" /></button>
+                        <button class="kori__btn-icon" @onclick='() => Kori.ApplyMarkdown("++")'><img src="/_content/Kori/icons/underline.svg" /></button>
                     </div>
                     <div class="kori-edit__actions">
                         <button class="kori-edit__cancel kori__btn" @onclick="Kori.CancelAsync">Cancel</button>
