Commented changes to upload image

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -63,7 +63,7 @@
                         <h5>Edit your image.</h5>
                     </div>
                     <div class="kori-edit__options">
-                        <form enctype="multipart/form-data">
+                        <form enctype="multipart/form-data" method="post">
                             <input type="file" id="imageInput" accept="image/*" />
                         </form>
                     </div>
