Send image for upload

--- a/Kori/KoriWidget.razor
+++ b/Kori/KoriWidget.razor
@@ -1,4 +1,5 @@
-﻿@using Microsoft.JSInterop
+﻿@using Microsoft.AspNetCore.Antiforgery
+@using Microsoft.AspNetCore.Components.Forms
 <div id="kori-widget" class="kori-widget kori-ignore">
     <div id="kori-widget__actions" class="kori-widget__actions kori-buddy__enabled">
         <img class="kori-buddy" src="/_content/Kori/images/kori-buddy.svg" />
@@ -63,8 +64,8 @@
                         <h5>Edit your image.</h5>
                     </div>
                     <div class="kori-edit__options">
-                        <form enctype="multipart/form-data" method="post">
-                            <input type="file" id="imageInput" accept="image/*" />
+                        <form enctype="multipart/form-data" method="post">                            
+                            <InputFile OnChange="Kori.OnImageSelected" id="image-input" accept="image/*" />
                         </form>
                     </div>
                     <div class="kori-edit__actions">
