--- a/Kori/KoriContent.razor
+++ b/Kori/KoriContent.razor
@@ -3,8 +3,8 @@
     @ChildContent
 </section>
 
-<Kori.KoriLogin2 />
-<Kori.KoriWidget />
+@* <Kori.KoriLogin2 />
+ *@<Kori.KoriWidget />
 
 @inject Kori Kori
 @inject NavigationManager Nav
