--- a/Kori/KoriLogin2.razor
+++ b/Kori/KoriLogin2.razor
@@ -1,26 +1,28 @@
 <div id="kori-login-2" class="kori-login-2 kori-ignore">
-    <div class="kori-login__toggle show">
-        <button class="kori-login__logged-out show">
+    <div class="kori-login__toggle show" _="on click toggle .show on .kori-login__menu">
+        <button class="kori-login__logged-out show" aria-label="user">
             <img src="/_content/Kori/icons/user-profile-x.svg" />
         </button>
-        <button class="kori-login__logged-in">
+        <button class="kori-login__logged-in" aria-label="user">
             <img src="/_content/Kori/icons/user-profile-check.svg" />
         </button>
     </div>
-    <div class="kori-login__menu @(showLogin ? "show" : "")">
+    <div class="kori-login__menu">
         <div class="kori-login__user">
             <p>Username</p>
-            <img src="/_content/Kori/icons/Logout.svg" />
+            <button class="kori-login__logout-btn" aria-label="log-out">
+                <img src="/_content/Kori/icons/Logout.svg" />
+            </button>
         </div>
         <div class="kori-login__actions">
             <div class="kori-login__btn">
-                <button>Log In <img src="/_content/Kori/icons/Arrow right.svg" /></button>
+                <button aria-label="log-in">Log In <img src="/_content/Kori/icons/Arrow right.svg" /></button>
             </div>
             <div class="kori-login__language">
                 <div class="@(showLanguages ? "show" : "")">
                     @if (selectedLanguage != null)
                     {
-                        <button class="toggle-languages selected" _="on click toggle .show on .language-list">@selectedLanguage.DisplayName</button>
+                        <button class="toggle-languages selected" _="on click toggle .show on .language-list" aria-label="select language">@selectedLanguage.DisplayName</button>
                     }
                     <div class="language-list">
                         <p class="list-header">Select your language:</p>
@@ -61,6 +63,7 @@
 @inject IJSRuntime Js
 
 @code {
+    bool isLoggedIn = false;
     bool showLogin = false;
     bool showLanguages = false;
     Language? selectedLanguage;
