Re-hook up new passwordless authentication with new namespace

--- a/SparcFeatures/Shared/NavMenu.razor
+++ b/SparcFeatures/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
             @if(ToggleContact != "toggle-show")
             {
                 <button @onclick="@Toggle" class="join btn-red">Join Community</button>
-                <Sparc.Blossom.Passwordless.GlobalLogin LanguageId=@K.Language />
+                <Sparc.Blossom.Authentication.Passwordless.GlobalLogin LanguageId=@K.Language />
             }
         </div>
     </div>
