--- a/Kori/KoriLogin2.razor
+++ b/Kori/KoriLogin2.razor
@@ -1,3 +1,8 @@
+<style>
+    @@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+</style>
+
+
 <div id="kori-login-2" class="kori-login-2 kori-ignore">
     <div class="kori-login__toggle show" _="on click toggle .show on .kori-login__menu">
         <button class="kori-login__logged-out show" aria-label="user">
