--- a/Kori/LanguageSelector.razor
+++ b/Kori/LanguageSelector.razor
@@ -1,4 +1,6 @@
 @using System.Net.Http.Json
+@using System.Globalization
+
 <div class="login-component__language">
     <div>
         @if (selectedLanguage != null)
@@ -13,7 +15,7 @@
                     @foreach (var language in Languages)
                     {
                         <li>
-                            <button>
+                            <button @onclick=@(() => ChangeLanguage(language))>
                                 @language.DisplayName
 
                                 @if (language.DisplayName != language.NativeName)
@@ -35,19 +37,21 @@
             </ul>
         </div>
     </div>
-</div>
+</div> 
 
 @code {
-    [Parameter] public string LanguageId { get; set; } = "en";
-    
+    [Parameter] public EventCallback<Language> LanguageChanged { get; set; }
+    string? SelectedLanguageId { get; set; }
     Language? selectedLanguage;
     List<Language>? Languages { get; set; }
+    
 
     protected override async Task OnInitializedAsync()
     {
+        SelectedLanguageId = CultureInfo.CurrentUICulture.TwoLetterISOLanguageName;
         Languages = await GetLanguagesAsync();
         Languages = Languages.OrderBy(x => x.DisplayName).ToList();
-        selectedLanguage = Languages.First(x => x.Id == LanguageId);
+        selectedLanguage = Languages.First(x => x.Id == SelectedLanguageId);
     }
 
     async Task<List<Language>> GetLanguagesAsync()
@@ -55,5 +59,13 @@
         var client = new HttpClient { BaseAddress = new Uri("https://ibis-web-kori.azurewebsites.net/") };
         return await client.GetFromJsonAsync<List<Language>>("publicapi/Languages")
                ?? new List<Language>();
+    }
+
+    async Task ChangeLanguage(Language language)
+    {
+        selectedLanguage = language;
+        SelectedLanguageId = language.Id;
+        if (LanguageChanged.HasDelegate)
+            await LanguageChanged.InvokeAsync(language);
     }
 }
