--- a/SparcFeatures/Shared/NavMenu.razor
+++ b/SparcFeatures/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
             @if(ToggleContact != "toggle-show")
             {
                 <button @onclick="@Toggle" class="join btn-red">Join Community</button>
-                <Kori.GlobalLogin LanguageId=@K.Language />
+                <Kori.GlobalLogin />
             }
         </div>
     </div>
